--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="/home/roettig/libs/java/java-getopt-1.0.13.jar"/>
 	<classpathentry kind="lib" path="/home/roettig/libs/java/Utilities.jar"/>
 	<classpathentry kind="lib" path="/home/roettig/libs/java/jnisvmlight.jar"/>
+	<classpathentry kind="lib" path="/home/roettig/libs/java/libsvm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
