--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/home/roettig/libs/java/java-getopt-1.0.13.jar"/>
-	<classpathentry kind="lib" path="/home/roettig/libs/java/Utilities.jar"/>
-	<classpathentry kind="lib" path="/home/roettig/libs/java/jnisvmlight.jar"/>
-	<classpathentry kind="lib" path="/home/roettig/libs/java/libsvm.jar"/>
+	<classpathentry kind="lib" path="lib/java-getopt-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/libsvm.jar"/>
+	<classpathentry kind="lib" path="lib/Utilities.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
