--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,13 @@
  </target>
 	
  <target name="compile" depends="prepare">
-      <javac srcdir="src/" destdir="bin/" includeantruntime="false" classpath="lib/java-getopt-1.0.13.jar:lib/libsvm.jar:lib/Utilities.jar"/>
+      <javac srcdir="src/" destdir="bin/" includeantruntime="false">
+      	<classpath>
+      	    <fileset dir="lib">
+      	     	<include name="*.jar"/>
+      	    </fileset>
+      	</classpath>
+      </javac>
  </target>
 	
  <target name="build" depends="compile">
